--- a/html/children.html
+++ b/html/children.html
@@ -80,7 +80,7 @@
       <div class="col" style="padding-left:20%;">
         <div class="dropdown menu">
           <button class="btn btn-secondary dropdown-toggle dropdown-m changer" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Sort By : <b>Relevance</b>
+            Sort By : Relevance
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> 
             
