--- a/html/shop.html
+++ b/html/shop.html
@@ -80,7 +80,7 @@
       <div class="col" style="padding-left:20%;">
         <div class="dropdown menu">
           <button class="btn btn-secondary dropdown-toggle dropdown-m changer" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Sort By : <b>Relevance</b>
+            Sort By : Relevance
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">  
             <li role = "button" onclick = "sorting('Price => Low  to High')"><a class="dropdown-item drpd-item"  href="#">Price => Low  to High </a></li>
@@ -98,16 +98,10 @@
             </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">  
           <li role = "button" onclick = "filterByName('All')"><a class="dropdown-item drpd-item" href="#">All</a></li>
-          <li role = "button" onclick = "filterByName('Bag')"><a class="dropdown-item drpd-item" href="#">Bag</a></li>
-          <li role = "button" onclick = "filterByName('SunGlasses')"><a class="dropdown-item drpd-item" href="#">SunGlasses</a></li>
-          <li role = "button" onclick = "filterByName('Jacket')"><a class="dropdown-item drpd-item" href="#">Jacket</a></li>
-          <li role = "button" onclick = "filterByName('Top')"><a class="dropdown-item drpd-item" href="#">Top</a></li>
-          <li role = "button" onclick = "filterByName('Tshirt')"><a class="dropdown-item drpd-item" href="#">TShirt</a></li>
-          <li role = "button" onclick = "filterByName('ChildCare')"><a class="dropdown-item drpd-item" href="#">ChildCare</a></li>
-          <li role = "button" onclick = "filterByName('Toy')"><a class="dropdown-item drpd-item" href="#">Toys</a></li>
-          <li role = "button" onclick = "filterByName('Dress')"><a class="dropdown-item drpd-item" href="#">Dress</a></li>
+          <li role = "button" onclick = "filterByName('Men')"><a class="dropdown-item drpd-item" href="#">Men</a></li>
+          <li role = "button" onclick = "filterByName('Women')"><a class="dropdown-item drpd-item" href="#">Women</a></li>
+          <li role = "button" onclick = "filterByName('Children')"><a class="dropdown-item drpd-item" href="#">Children</a></li>
           
-
         </div>
       </div>
       </div>
