--- a/html/women.html
+++ b/html/women.html
@@ -80,12 +80,12 @@
       <div class="col" style="padding-left:20%;">
         <div class="dropdown menu">
           <button class="btn btn-secondary dropdown-toggle dropdown-m changer" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Sort By : <b>Relevance</b>
+            Sort By : Relevance
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">  
               <li role = "button" onclick = "sorting('Price => Low to High')"><a class="dropdown-item drpd-item"  href="#">Price => Low to High</a></li>
               <li role = "button" onclick = "sorting('Price => High to Low')" ><a class="dropdown-item drpd-item" role = "button" href="#">Price => High to Low</a></li>
-              <li role = "button" onclick = "sorting('Relevance')"><a class="dropdown-item drpd-item"  href="#">Relevance</a></li>
+              <li role = "button" onclick = "sorting('Relevance')" id="Relevance"><a class="dropdown-item drpd-item"  href="#">Relevance</a></li>
             </div>
         </div>
       </div>
