--- a/index.html
+++ b/index.html
@@ -84,10 +84,40 @@
     </div>
   </section>
 
+  <section class="top-rated" id="new-arrival">
+    <div class="container1">
+
+
+      <h2 id="newArrival">New Arrivals</h2>
+
+      <ul class="filter-list">
+
+        <li>
+          <button class="filter-btn changer2" role = "button" onclick = "filterByName('All')">All</button>
+        </li>
+
+        <li>
+          <button class="filter-btn changer2" role = "button" onclick = "filterByName('Men')">Men</button>
+        </li>
+
+        <li>
+          <button class="filter-btn changer2" role = "button" onclick = "filterByName('Women')">Women</button>
+        </li>
+
+        <li>
+          <button class="filter-btn changer2" role = "button" onclick = "filterByName('Children')">Children</button>
+        </li>
+
+      </ul>
+      </div>
+      </section>
+
+
+
   <!-- products section  -->
   <section class = "products">
     <div class = "container">
-      <h2>New Arrivals</h2>
+      <!-- <h2>New Arrivals</h2> -->
       <div class = "product-list">
         
       </div>
