--- a/html/about.html
+++ b/html/about.html
@@ -138,7 +138,7 @@
     </div>
     </div>
     <div class="col">
-        <h4>Product</h4>
+        <h4><b>Product</b></h4>
         <a href="#">Download</a>
         <a href="#">Pricing</a>
         <a href="#">Locations</a>
@@ -147,18 +147,16 @@
         <a href="#">Blog</a>
     </div>
     <div class="col">
-        <h4>Category</h4>
+        <h4><b>Category</b></h4>
         <a href="#">Men</a>
         <a href="#">Women</a>
         <a href="#">Kids</a>
         <a href="#">Best Seller</a>
-        <a href="#">New Arrivals</a>
         
     </div>
 
     <div class="col">
-        <h4>My Account</h4>
-        <a href="#">My Account</a>
+        <h4><b>My Account</b></h4>
         <a href="#">Discount</a>
         <a href="#">Returns</a>
         <a href="#">Order History</a>
@@ -167,7 +165,7 @@
     </div>
 
     <div class="col install">
-        <h4>Contact Us</h4>
+        <h4><b>Contact Us</b></h4>
         <p><strong>Address: </strong>123 Street Trafford, London, UK</p>
         <p><strong>Mail: </strong>info@sitename.com</p>
         <p><strong>Phone: </strong>+456 789 789 001</p>
