Added rupee instead of dollar in price

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class = "cart-total">
-          <h3>Total: $</h3>
+          <h3>Total: ₹</h3>
           <span id = "cart-total-value"></span>
         </div>
       </div>
