--- a/html/shop.html
+++ b/html/shop.html
@@ -75,9 +75,9 @@
 
 
 
-  <section id="filter-section" class="section-p1" class="section-m1">
+  <section id="filter-section" class="section-p1">
     <div class="row">
-      <div class="col" style="padding-left:20%;">
+      <div class="col" style="padding-left:20%; padding-bottom: 10px;">
         <div class="dropdown menu">
           <button class="btn btn-secondary dropdown-toggle dropdown-m changer" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Sort By : Relevance
