--- a/html/men.html
+++ b/html/men.html
@@ -42,7 +42,6 @@
         <li><a href="../html/blog.html">Blog</a></li>
         <li><a href="../html/about.html">About</a></li>
         <li><a href="../html/contact.html">Contact</a></li>
-        <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
         <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
       </ul>
     </div>
@@ -77,7 +76,7 @@
 
   <section id="filter-section" class="section-p1" class="section-m1">
     <div class="row">
-      <div class="col" style="padding-left:20%;">
+      <div class="col" style="padding-left:20%; padding-bottom: 10px;">
         <div class="dropdown menu">
           <button class="btn btn-secondary dropdown-toggle dropdown-m changer" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Sort By : Relevance
@@ -155,7 +154,7 @@
     </div>
     <div class="fe-box">
       <img src="../assets/features/f4.png" alt="">
-      <h6>Promotions</h6>
+      <h6>Promotion Endorsment</h6>
     </div>
     <div class="fe-box">
       <img src="../assets/features/f5.png" alt="">
