--- a/html/shop.html
+++ b/html/shop.html
@@ -42,7 +42,6 @@
         <li><a href="../html/blog.html">Blog</a></li>
         <li><a href="../html/about.html">About</a></li>
         <li><a href="../html/contact.html">Contact</a></li>
-        <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
         <a href="#" id="close"><i class="fa-solid fa-xmark"></i></a>
       </ul>
     </div>
@@ -158,7 +157,7 @@
     </div>
     <div class="fe-box">
       <img src="../assets/features/f4.png" alt="">
-      <h6>Promotions</h6>
+      <h6>Promotion Endorsment</h6>
     </div>
     <div class="fe-box">
       <img src="../assets/features/f5.png" alt="">
